Fix colours and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ html {
 }
 
 a {
-  color: #568c36;
+  color: #113c00;
 }
 
 a:hover {
@@ -35,7 +35,9 @@ a:hover {
   text-decoration: none;
 }
 
-.nav a:hover {
+.nav a:hover,
+.nav a:focus {
+  outline: 2px solid #000;
   background-color: #fff;
   color: #113c00;
 }
